syntax = "proto3";

package messenger;

option go_package = "./generated";

// KeyExchangeService предоставляет методы для безопасного обмена ключами
// по протоколу Диффи-Хеллмана между пользователями, где сервер выступает
// в роли посредника для хранения и передачи параметров.
service KeyExchangeService {
  // InitKeyExchange инициирует процесс обмена ключами.
  // Пользователь отправляет:
  // 1. Имя собеседника
  // 2. Генератор g
  // 3. Большое простое число p
  // 4. Свой публичный ключ A = g^a mod p, где a - приватный ключ пользователя
  rpc InitKeyExchange(InitKeyExchangeRequest) returns (InitKeyExchangeResponse);
  
  // CompleteKeyExchange завершает обмен ключами.
  // Второй пользователь отправляет:
  // 1. Имя собеседника
  // 2. Свой публичный ключ B = g^b mod p, где b - приватный ключ второго пользователя
  rpc CompleteKeyExchange(CompleteKeyExchangeRequest) returns (CompleteKeyExchangeResponse);
  
  // GetKeyExchangeParams получает параметры обмена ключами, сохраненные на сервере
  // для конкретного собеседника.
  rpc GetKeyExchangeParams(GetKeyExchangeParamsRequest) returns (GetKeyExchangeParamsResponse);
}

// Статус обмена ключами
enum KeyExchangeStatus {
  NOT_STARTED = 0;      // Обмен ключами не начат
  INITIATED = 1;        // Инициировано пользователем 1 (отправлены g, p, A)
  COMPLETED = 2;        // Завершено пользователем 2 (отправлено B)
  FAILED = 3;           // Ошибка обмена ключами
}

// Запрос на инициализацию обмена ключами
message InitKeyExchangeRequest {
  string username = 1;    // Имя собеседника
  string dh_g = 2;        // Параметр g (генератор)
  string dh_p = 3;        // Параметр p (простое число)
  string dh_a_public = 4; // Публичный ключ A = g^a mod p
}

// Ответ на инициализацию обмена ключами
message InitKeyExchangeResponse {
  bool success = 1;
  string error_message = 2;
}

// Запрос на завершение обмена ключами
message CompleteKeyExchangeRequest {
  string username = 1;     // Имя собеседника
  string dh_b_public = 2;  // Публичный ключ B = g^b mod p
}

// Ответ на завершение обмена ключами
message CompleteKeyExchangeResponse {
  bool success = 1;
  string error_message = 2;
}

// Запрос на получение параметров обмена ключами
message GetKeyExchangeParamsRequest {
  string username = 1;    // Имя собеседника
}

// Ответ с параметрами обмена ключами
message GetKeyExchangeParamsResponse {
  bool success = 1;
  KeyExchangeStatus status = 2;  // Статус обмена ключами
  string dh_g = 3;               // Параметр g (генератор)
  string dh_p = 4;               // Параметр p (простое число)
  string dh_a_public = 5;        // Публичный ключ A первого пользователя
  string dh_b_public = 6;        // Публичный ключ B второго пользователя
  string error_message = 7;
} 